infrastructures/OCI/k8s/monitoring/alertmanager-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: prometheus-alertmanager
          port: 9093
      middlewares:
        - name: google-auth
          namespace: traefik
  tls:
    certResolver: letsencrypt
