infrastructures/OCI/k8s/monitoring/jaeger-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jaeger.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: jaeger
          port: 16686
      middlewares:
        - name: google-auth
          namespace: traefik
  tls:
    certResolver: letsencrypt
