infrastructures/OCI/k8s/monitoring/loki-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: loki
          port: 3100
      middlewares:
        - name: google-auth
          namespace: traefik
  tls:
    certResolver: letsencrypt
