infrastructures/OCI/k8s/monitoring/prometheus-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
      middlewares:
        - name: google-auth
          namespace: traefik
  tls:
    certResolver: letsencrypt
